--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,7 @@
 {
-  "extends": [
-    "config:base"
-  ]
+  "extends": ["config:base", ":preserveSemverRanges"],
+  "rangeStrategy": "bump",
+  "labels": ["dependencies"],
+  "assignees": ["rclement"],
+  "reviewers": ["rclement"]
 }
